# OpsBridge

./: README.md  pyproject.toml
.kiro/specs/sentinel-cloud-mcp/: .config.kiro  design.md  requirements.md  tasks.md
opsbridge/: __init__.py  mock_state.py  models.py
opsbridge/scripts/: __init__.py
opsbridge/tests/: __init__.py  test_analyst_logic.py  test_mock_state.py  test_models.py  test_prompts.py  test_resource.py
